After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702419 - [MM 0.8] Connection failure in MBIM mode: NoDeviceSupport
[MM 0.8] Connection failure in MBIM mode: NoDeviceSupport
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: Mobile broadband
0.9.8
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-06-17 01:17 UTC by Jiehan Zheng
Modified: 2013-06-17 13:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
MM output when I tried to connect through NM three times (4.83 KB, text/x-log)
2013-06-17 04:10 UTC, Jiehan Zheng
  Details
MM output when I tried to connect through NM three times (w/ --debug) (149.57 KB, text/x-log)
2013-06-17 04:11 UTC, Jiehan Zheng
  Details
Patch. (1.46 KB, patch)
2013-06-17 06:31 UTC, Aleksander Morgado
committed Details | Review
MM output after applying the path (3.65 KB, text/x-log)
2013-06-17 11:31 UTC, Jiehan Zheng
  Details
MM output after applying the patch (114.19 KB, text/x-log)
2013-06-17 11:34 UTC, Jiehan Zheng
  Details

Description Jiehan Zheng 2013-06-17 01:17:09 UTC
I have the Ericsson H5321gw, NM 0.9.8.2 and ModemManager 0.7.991.

Starting this afternoon, whenever I run:
nmcli c up id 'T-Mobile'

I get this from journalctl:
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> Activation (cdc-wdm1) starting connection 'T-Mobile'
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> (cdc-wdm1): device state change: disconnected -> prepare (reason 'none') [30 40 0]
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> Activation (cdc-wdm1) Stage 1 of 5 (Device Prepare) scheduled...
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> Activation (cdc-wdm1) Stage 1 of 5 (Device Prepare) started...
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> Activation (cdc-wdm1) Stage 1 of 5 (Device Prepare) complete.
Jun 16 20:53:45 tpx1c ModemManager[236]: <info>  Simple connect started...
Jun 16 20:53:45 tpx1c ModemManager[236]: <info>  Simple connect state (4/8): Wait to get fully enabled
Jun 16 20:53:45 tpx1c ModemManager[236]: <info>  Simple connect state (5/8): Register
Jun 16 20:53:45 tpx1c ModemManager[236]: <info>  Simple connect state (6/8): Bearer
Jun 16 20:53:45 tpx1c ModemManager[236]: <info>  Simple connect state (7/8): Connect
Jun 16 20:53:45 tpx1c ModemManager[236]: <info>  Modem /org/freedesktop/ModemManager1/Modem/3: state changed (registered -> connecting)
Jun 16 20:53:45 tpx1c ModemManager[236]: <info>  Modem /org/freedesktop/ModemManager1/Modem/3: state changed (connecting -> registered)
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> (cdc-wdm1) modem state changed, 'registered' --> 'connecting' (reason: user-requested)
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> (cdc-wdm1) modem state changed, 'connecting' --> 'registered' (reason: user-requested)
Jun 16 20:53:45 tpx1c NetworkManager[273]: <warn> (cdc-wdm1) failed to connect modem: NoDeviceSupport
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> (cdc-wdm1): device state change: prepare -> failed (reason 'unknown') [40 120 1]
Jun 16 20:53:45 tpx1c NetworkManager[273]: <warn> Activation (cdc-wdm1) failed for connection 'T-Mobile'
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> (cdc-wdm1): device state change: failed -> disconnected (reason 'none') [120 30 0]
Jun 16 20:53:45 tpx1c NetworkManager[273]: <info> (cdc-wdm1): deactivating device (reason 'none') [0]
Jun 16 20:53:45 tpx1c NetworkManager[273]: <warn> (cdc-wdm1) firewall zone remove failed: (32) UNKNOWN_INTERFACE: cdc-wdm1
Jun 16 20:53:50 tpx1c ModemManager[236]: <info>  Modem /org/freedesktop/ModemManager1/Modem/3: signal quality updated (45)

But it just worked with NetworkManager a few hours ago...any ideas?
Comment 1 Jiehan Zheng 2013-06-17 04:10:29 UTC
Created attachment 246992 [details]
MM output when I tried to connect through NM three times
Comment 2 Jiehan Zheng 2013-06-17 04:11:04 UTC
Created attachment 246993 [details]
MM output when I tried to connect through NM three times (w/ --debug)
Comment 3 Aleksander Morgado 2013-06-17 06:31:23 UTC
Created attachment 246998 [details] [review]
Patch.

Please retry after applying the patch attached, and also send back MM debug logs.
Comment 4 Aleksander Morgado 2013-06-17 06:34:11 UTC
Also, just in case, make sure you have enough prepaid balance to setup a connection (because I'm reading some "You have 20% of data usage left on your mobile broadband pass..." SMS around). :)
Comment 5 Jiehan Zheng 2013-06-17 11:31:17 UTC
Created attachment 247011 [details]
MM output after applying the path
Comment 6 Jiehan Zheng 2013-06-17 11:34:57 UTC
Created attachment 247012 [details]
MM output after applying the patch
Comment 7 Jiehan Zheng 2013-06-17 11:35:51 UTC
Seems to be all working again after the patch.  Thank you!
Comment 8 Aleksander Morgado 2013-06-17 13:49:33 UTC
Pushed to git master; thanks for testing.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.